--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.3",
+    "daisyui": "^2.51.4",
+    "marked": "^4.2.12",
+    "microcms-js-sdk": "^2.3.2",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/marked": "^4.0.8"
   }
 }
